--- a/style.css
+++ b/style.css
@@ -1,23 +1,27 @@
-*{
+* {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
     font-family: sans-serif;
 }
-input{
-    display: none;    
+
+input {
+    display: none;
 }
-.container{
+
+.container {
     width: 100%;
     text-align: center;
 }
-h1{
+
+h1 {
     font-weight: normal;
     font-size: 35px;
     position: relative;
     margin: 40px 0;
 }
-h1::before{
+
+h1::before {
     content: '';
     position: absolute;
     width: 100px;
@@ -26,38 +30,44 @@ h1::before{
     bottom: -10px;
     left: 50%;
     transform: translateX(-50%);
-    animation: alternate 4s linear infinite;
+    animation: animate 4s linear infinite;
 }
-@keyframes animate{
-    0%{
+
+@keyframes animate {
+    0% {
         width: 100px;
     }
-    50%{
+
+    50% {
         width: 200px;
     }
-    100%{
+
+    100% {
         width: 100px;
     }
 
 }
-.top-content{
+
+.top-content {
     background-color: rgb(243, 243, 243);
     width: 90%;
     margin: 0 auto 20px auto;
     height: 60px;
     display: flex;
     align-items: center;
-    border-radius: 5px ;
+    border-radius: 5px;
     box-shadow: 3px 3px 5px lightgray;
 }
-h3{
+
+h3 {
     height: 100%;
     background-color: lightgray;
     line-height: 60px;
     padding: 0 50px;
     color: white;
 }
-label{
+
+label {
     display: inline-block;
     height: 100%;
     margin: 0 20px;
@@ -67,64 +77,69 @@ label{
     cursor: pointer;
     transform: .5s;
 }
-label:hover{
+
+label:hover {
     color: black;
 }
-photo-gallery{
-    width: 90%;
-    margin: auto;
-    display: grid;
-    grid-template-columns: repeat(4,1fr);
-    grid-gap: 20px;
-}
-.pic{
+
+
+.pic {
     position: relative;
+    margin: 10px;
+    display: inline-block;
     height: 230px;
     width: 230px;
-    border-radius:10px ;
+    border-radius: 10px;
     box-shadow: 2px 2px 5px lightgray;
     cursor: pointer;
 }
-.pic img{
+
+.pic img {
     width: 100%;
     height: 100%;
-    border-radius:10px ;
+    border-radius: 10px;
+    position: relative;
 }
-.pic::before{
+
+.pic::before {
     content: "PHOTO GALLERY";
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translateX(-50%, -50%);
-    color:wheat;
+    color: wheat;
     font-size: 22px;
-    font-weight:bold ;
+    font-weight: bold;
+
     width: 100%;
-    margin: 100%;
+    height: 100%;
     opacity: 0;
+
+    z-index: 11;
+
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    
+    position: absolute;
     transition: .3s;
     transition-delay: .2s;
 }
-.pic::after{
+
+.pic::after {
     content: "";
-    position: absolute;
     width: 100%;
-    bottom: 0;
-    border-radius: 10px;
     height: 0;
-    background-color: rgba(0,  0, 0, 4);
+    left: 0;
+    opacity: .3;
+    border-radius: 10px;
+    position: absolute;
+    background-color: rgba(0, 0, 0, 4);
     transition: .3s;
+    z-index: 10;
 }
-.pic:hover::after{
+
+.pic:hover::after {
     height: 100%;
 }
-.pic:hover::before{
-    margin-top:0 ;
+
+.pic:hover::before {
+    margin-top: 0;
     opacity: 1;
 }
-#check1:checked .containe.photo-gallery .pic,{
-    opacity: 1;
-    transfrom: scale(1);
-    position: relative;
-}
-  
